add spin changes

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -273,7 +273,7 @@ where $\Theta(x)$ is Heaviside or step function,
     \end{cases}
 \end{align}
 
-\subsection*{\underline{Bound State of Single $\delta$-Potential $E < 0$:}}
+\subsection*{\underline{Bound State of Single $\delta$-Potential:} \fbox{$E < 0$}}
 \begin{align}
      & V=-\alpha\delta(x), \ \alpha>0
      & 
@@ -282,11 +282,14 @@ where $\Theta(x)$ is Heaviside or step function,
      & E=-\frac{m\alpha^2}{2\hbar^2}
 \end{align}
 
-\subsection*{\underline{Scattering State:}}
+\subsection*{\underline{Scattering State:} \fbox{$E > 0$}}
 \begin{align}
-     & V(x)=-\alpha\delta(x)
+     & V(x)=-\alpha\delta(x);\, k = \frac{\sqrt{2mE}}{\hbar}
      & 
-     & \psi(x)=\left\{\begin{matrix}Ae^{ikx}+Be^{-ikx}, x<0\\Fe^{ikx}, x>0\end{matrix}\right.
+     & \psi(x) = \begin{cases}
+        Ae^{ikx}+Be^{-ikx}, & x<0 \\
+        Fe^{ikx},           & x>0
+    \end{cases}
     \\
      & T=\frac{|F|^2}{|A|^2}=\frac{1}{1+\beta^2}
      & 
@@ -299,30 +302,47 @@ where $\Theta(x)$ is Heaviside or step function,
      &  & 
     \int_{-\infty}^\infty e^{-(ax^2+bx)}\,dx=e^{b^2/4a}\sqrt{\frac{\pi}{a}};
      &  & 
-    \delta_{ij}=\left\{
-    \begin{matrix}
-        1,\quad i=j \\
-        0,\quad i\neq j
-    \end{matrix}
-    \right.
+    \delta_{ij} =
+    \begin{cases}
+        1, & i=j     \\
+        0, & i\neq j
+    \end{cases}
 \end{align}
 
 \subsection*{\underline{Matrix Algebra:}}
 Let A be a 2X2 matrix defined as:
-$A=\left(
-    \begin{matrix}
-            a & b \\
-            c & d
-        \end{matrix}
-    \right)$ then:
+$A = \begin{bmatrix}
+        a & b \\
+        c & d
+    \end{bmatrix}$ then:
 \begin{align}
-     & A^{-1}=\frac{1}{|A|}\left(
-    \begin{matrix}
-            d  & -b \\
-            -c & a
-        \end{matrix}
-    \right);
-     &                            & |A| = ad-bc
+     &  & A^{-1}=\frac{1}{|A|}
+    \begin{bmatrix}
+        d  & -b \\
+        -c & a
+    \end{bmatrix};\, |A| = ad-bc
+\end{align}
+\begin{align}
+    \sigma_x = \begin{bmatrix}
+        0 & 1 \\
+        1 & 0
+    \end{bmatrix} \qquad
+    \sigma_y = \begin{bmatrix}
+        0 & -1 \\
+        i & 0
+    \end{bmatrix} \qquad
+    \sigma_z = \begin{bmatrix}
+        1 & 0  \\
+        0 & -1
+    \end{bmatrix}
+\end{align}
+\begin{align}
+    \{ \sigma_i, \sigma_j \} = 2 \delta_ij \qquad
+    [\sigma_i, \sigma_j] = 2i \in ijk \qquad
+    \sigma_i \sigma_j = \begin{cases}
+        1 ,                   & i=j      \\
+        - \sigma_j \sigma_i , & i \neq j
+    \end{cases}
 \end{align}
 
 \subsection*{\underline{Orbital Angular Momentum:}}
@@ -339,7 +359,7 @@ $A=\left(
     \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
 \end{gather}
 
-\subsection*{\underline{General Momentum Operator}}
+\subsection*{\underline{General Momentum Operator} \fbox{$\vec{L},\, \vec{S},\, \vec{J}$}}
 \begin{flalign}
      & \left[J_x, J_y\right]=i\hbar J_z
      &                                   & \left[J_z, J_x\right]=i\hbar J_y
@@ -377,130 +397,130 @@ $\ket{J,J}\quad\ket{J,J-1}\quad\ket{J,J-2}\quad \dots \quad\ket{J,-J}$\\
     
     \subsection*{\underline{Spin Angular Momentum Operator}}
     For $j=\frac{1}{2}\implies \ket{\uparrow} = \ket{\frac{1}{2},\frac{1}{2}}; \ket{\downarrow} = \ket{\frac{1}{2},-\frac{1}{2}} then:$
-    \begin{flalign}
-         & S_x=\frac{\hbar}{2}\left(
-        \begin{matrix}
-                0 & 1 \\
-                1 & 0
-            \end{matrix}\right) = \frac{\hbar}{2}\sigma_1
-         &                                  & S_y=\frac{\hbar}{2}\left(
-        \begin{matrix}
-                0 & -i \\
-                i & 0
-            \end{matrix}\right) = \frac{\hbar}{2}\sigma_2
-         &                                  & S_z=\frac{\hbar}{2}\left(
-        \begin{matrix}
-                1 & 0  \\
-                0 & -1
-            \end{matrix}\right) = \frac{\hbar}{2}\sigma_3
-         &                                                                     \\
-         & \left[S_x, S_y\right]=i\hbar S_z
-         &                                  & \left[S_z, S_x\right]=i\hbar S_y
-         &                                  & \left[S_y, S_z\right]=i\hbar S_x
-         &                                                                     \\
-         & S_+=S_x+iS_y
-         &                                  & S_-=S_x-iS_y
-         &                                                                     \\
-         & S_+=\frac{\hbar}{2}\left(
-        \begin{matrix}
-                0 & 2 \\
-                0 & 0
-            \end{matrix}\right)
-         &                                  & S_-=\frac{\hbar}{2}\left(
-        \begin{matrix}
-                0 & 0 \\
-                2 & 0
-            \end{matrix}\right)
-    \end{flalign}
-    
-    \subsection*{\underline{Spherical Harmonics:}}
-    \begin{gather}
-        Y_{\ell, m}(\theta, \phi) \equiv \mathcal{N}_{\ell, m} P_{\ell}^{m}(\cos \theta) e^{i m \phi}\\
-        \hat{L}_{z} Y_{\ell m}=\hbar m Y_{\ell m}\\
-        \hat{L}^{2} Y_{\ell m}=\hbar^{2} \ell(\ell+1) Y_{\ell m}\\
-        \int d \Omega Y_{\ell^{\prime} m^{\prime}}^{*}(\theta, \phi) Y_{\ell m}(\theta, \phi)=\delta_{\ell^{\prime}, \ell} \delta_{m^{\prime}, m}, \quad \int d \Omega=\int_{0}^{2 \pi} d \phi \int_{-1}^{1} d(\cos \theta)\\
-        Y_{0,0}(\theta, \phi)=\frac{1}{\sqrt{4 \pi}} ; \quad Y_{1, \pm 1}(\theta, \phi)=\mp \sqrt{\frac{3}{8 \pi}} \sin \theta \exp (\pm i \phi) ; \quad Y_{1,0}(\theta, \phi)=\sqrt{\frac{3}{4 \pi}} \cos \theta
-    \end{gather}
-    
-    \subsection*{\underline{Central Potentials $V(\mathbf{r})=V(r)$:}}
-    \begin{gather}
-        \left[ \frac{-\hbar^2}{2m}\nabla^2+V(r) \right]\psi(r,\theta,\phi)=E\psi(r,\theta,\phi)\\
-        -\frac{\hbar^2}{2m}\left[ \frac{1}{r}\frac{\partial^2}{\partial r^2}r- \frac{L^2(\theta,\phi)}{\hbar^2r^2}+V(r)\right]\psi(r,\theta,\phi)=E\psi(r,\theta,\phi)\\
-        \psi(r, \theta, \phi)=R(r)Y_{l,m}*(\theta\phi)\\
-        \psi(r, \theta, \phi)=\frac{u(r)}{r} Y_{\ell m}(\theta, \phi)\\
-        \left(-\frac{\hbar^{2}}{2 m} \frac{d^{2}}{d r^{2}}+V(r)+\frac{\hbar^{2} \ell(\ell+1)}{2 m r^{2}}\right) u(r)=E u(r)\\
-        u(r) \sim r^{\ell+1},\ \mathrm{as} r \rightarrow 0\\
-        \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-        \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
-        \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
-    \end{gather}
-    
-    \subsection*{\underline{Hydrogen Atom (Z=1):}}
-    \begin{gather}
-        H=\frac{\mathbf{p}^{2}}{2 m}-\frac{Z e^{2}}{r} \\
-        E_{n}=-\frac{Z^{2} e^{2}}{2 a_{0}} \frac{1}{n^{2}}, \quad a_{0}=\frac{\hbar^{2}}{m e^{2}} \simeq 0.529 \times 10^{-10} \mathrm{~m}, \quad \frac{e^{2}}{2 a_{0}} \simeq 13.6 \mathrm{eV} \\
-        \psi_{n \ell m}(r, \theta,\phi)=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} {Y_{\ell}^m}(\theta, \phi) \\
-        \psi_{n\ell m}(r, \theta, \phi) = R_{n \ell}(r){Y_{\ell}^m}(\theta, \phi)= \sqrt{\left(\frac{2}{na}\right)^3\frac{\left(n-\ell-1\right)!}{2n(n+\ell)!}}e^{\frac{-r}{na}}\left(\frac{2r}{na}\right)^\ell [L_{n-\ell-1}^{2\ell+1}\left(\frac{2r}{na}\right)]{Y_{\ell}^m}(\theta, \phi)\\
-        \int\psi^*_{n \ell m}(\vec{r})\psi_{n' \ell ' m'}(\vec{r})d^3\vec r=\delta_{nn'}\delta_{mm'}\delta_{\ell\ell '}\\
-        \hat{H}\psi_{n \ell m}(\vec{r}) = E_n\psi_{n \ell m}(\vec{r})\\
-        n=1,2, \ldots, \quad \ell=0,1, \ldots, n-1, \quad m=-\ell, \ldots, \ell \\
-        \psi_{n\ell m}(r, \theta, \phi)=\frac{u_{n \ell}(r)}{r} {Y_{\ell}^m}(\theta, \phi) \\
-        u_{1,0}(r)=\frac{2 r}{a_{0}^{3 / 2}} \exp \left(-r / a_{0}\right) \\
-        u_{2,0}(r)=\frac{2 r}{\left(2 a_{0}\right)^{3 / 2}}\left(1-\frac{r}{2 a_{0}}\right) \exp \left(-r / 2 a_{0}\right) \\
-        u_{2,1}(r)=\frac{1}{\sqrt{3}} \frac{1}{\left(2 a_{0}\right)^{3 / 2}} \frac{r^{2}}{a_{0}} \exp \left(-r / 2 a_{0}\right)
-    \end{gather}
-    
-    \subsection*{\underline{Spherical Coordinates:}}
-    $$
-        \begin{aligned}
-             & \hat{\mathbf{r}}=\sin \theta \cos \phi \hat{\mathbf{x}}+\sin \theta \sin \phi \hat{\mathbf{y}}+\cos \theta \hat{\mathbf{z}}          \\
-             & \hat{\boldsymbol{\theta}}=\cos \theta \cos \phi \hat{\mathbf{x}}+\cos \theta \sin \phi \hat{\mathbf{y}}-\sin \theta \hat{\mathbf{z}} \\
-             & \hat{\boldsymbol{\phi}}=-\sin \phi \hat{\mathbf{x}}+\cos \phi \hat{\mathbf{y}}
-        \end{aligned}
-    $$
-    $$
-        \begin{aligned}
-             & \hat{\mathbf{x}}=\sin \theta \cos \phi \hat{\mathbf{r}}+\cos \theta \cos \phi \hat{\boldsymbol{\theta}}-\sin \phi \hat{\boldsymbol{\phi}} \\
-             & \hat{\mathbf{y}}=\sin \theta \sin \phi \hat{\mathbf{r}}+\cos \theta \sin \phi \hat{\boldsymbol{\theta}}+\cos \phi \hat{\boldsymbol{\phi}} \\
-             & \hat{\mathbf{z}}=\cos \theta \hat{\mathbf{r}}-\sin \theta \hat{\boldsymbol{\theta}}
-        \end{aligned}
-    $$
-    
-    \subsection*{\underline{Identical Particles:}}
-    Particles that share the same intrinsic properties: mass, charge, spin, magnetic moment, \dots etc. Identical particles are indistinguishable
-    \begin{equation}
-        \Psi(1, 2, \dots, i, \dots, j, \dots, N)=\pm\Psi(1, 2, \dots, j, \dots, i, \dots, N)
-    \end{equation}
-    are either symmetric for Bosons (integer spin particles) or antisymmetric for Fermions (half integer spin particles) under exchange of any two particles.\\
+\begin{flalign}
+     & S_x=\frac{\hbar}{2}\left(
+    \begin{matrix}
+            0 & 1 \\
+            1 & 0
+        \end{matrix}\right) = \frac{\hbar}{2}\sigma_1
+     &                                  & S_y=\frac{\hbar}{2}\left(
+    \begin{matrix}
+            0 & -i \\
+            i & 0
+        \end{matrix}\right) = \frac{\hbar}{2}\sigma_2
+     &                                  & S_z=\frac{\hbar}{2}\left(
+    \begin{matrix}
+            1 & 0  \\
+            0 & -1
+        \end{matrix}\right) = \frac{\hbar}{2}\sigma_3
+     &                                                                     \\
+     & \left[S_x, S_y\right]=i\hbar S_z
+     &                                  & \left[S_z, S_x\right]=i\hbar S_y
+     &                                  & \left[S_y, S_z\right]=i\hbar S_x
+     &                                                                     \\
+     & S_+=S_x+iS_y
+     &                                  & S_-=S_x-iS_y
+     &                                                                     \\
+     & S_+=\frac{\hbar}{2}\left(
+    \begin{matrix}
+            0 & 2 \\
+            0 & 0
+        \end{matrix}\right)
+     &                                  & S_-=\frac{\hbar}{2}\left(
+    \begin{matrix}
+            0 & 0 \\
+            2 & 0
+        \end{matrix}\right)
+\end{flalign}
+
+\subsection*{\underline{Spherical Harmonics:}}
+\begin{gather}
+    \langle \theta\, \phi | l \,m \rangle = Y_{\ell, m}(\theta, \phi) \equiv \mathcal{N}_{\ell, m} P_{\ell}^{m}(\cos \theta) e^{i m \phi}\\
+    \hat{L}_{z} Y_{\ell m}=\hbar m Y_{\ell m}\\
+    \hat{L}^{2} Y_{\ell m}=\hbar^{2} \ell(\ell+1) Y_{\ell m}\\
+    \langle l' \,m' | l \,m \rangle = \int d \Omega Y_{\ell^{\prime} m^{\prime}}^{*}(\theta, \phi) Y_{\ell m}(\theta, \phi)=\delta_{\ell^{\prime}, \ell} \delta_{m^{\prime}, m}, \quad \int d \Omega=\int_{0}^{2 \pi} d \phi \int_{-1}^{1} d(\cos \theta)\\
+    Y_{0,0}(\theta, \phi)=\frac{1}{\sqrt{4 \pi}} ; \quad Y_{1, \pm 1}(\theta, \phi)=\mp \sqrt{\frac{3}{8 \pi}} \sin \theta \exp (\pm i \phi) ; \quad Y_{1,0}(\theta, \phi)=\sqrt{\frac{3}{4 \pi}} \cos \theta
+\end{gather}
+
+\subsection*{\underline{Central Potentials $V(\mathbf{r})=V(r)$:}}
+\begin{gather}
+    \left[ \frac{-\hbar^2}{2m}\nabla^2+V(r) \right]\psi(r,\theta,\phi)=E\psi(r,\theta,\phi)\\
+    -\frac{\hbar^2}{2m}\left[ \frac{1}{r}\frac{\partial^2}{\partial r^2}r- \frac{L^2(\theta,\phi)}{\hbar^2r^2}+V(r)\right]\psi(r,\theta,\phi)=E\psi(r,\theta,\phi)\\
+    \psi(r, \theta, \phi)=R(r)Y_{l,m}*(\theta\phi)\\
+    \psi(r, \theta, \phi)=\frac{u(r)}{r} Y_{\ell m}(\theta, \phi)\\
+    \left(-\frac{\hbar^{2}}{2 m} \frac{d^{2}}{d r^{2}}+V(r)+\frac{\hbar^{2} \ell(\ell+1)}{2 m r^{2}}\right) u(r)=E u(r)\\
+    u(r) \sim r^{\ell+1},\ \mathrm{as} r \rightarrow 0\\
+    \nabla^{2}=\frac{1}{r} \frac{\partial^{2}}{\partial r^{2}} r+\frac{1}{r^{2}}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
+    \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
+    \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
+\end{gather}
+
+\subsection*{\underline{Hydrogen Atom (Z=1):}}
+\begin{gather}
+    H=\frac{\mathbf{p}^{2}}{2 m}-\frac{Z e^{2}}{r} \\
+    E_{n}=-\frac{Z^{2} e^{2}}{2 a_{0}} \frac{1}{n^{2}}, \quad a_{0}=\frac{\hbar^{2}}{m e^{2}} \simeq 0.529 \times 10^{-10} \mathrm{~m}, \quad \frac{e^{2}}{2 a_{0}} \simeq 13.6 \mathrm{eV} \\
+    \psi_{n \ell m}(r, \theta,\phi)=A\left(\frac{r}{a_{0}}\right)^{\ell}\left(\text { Polynomial in } \frac{r}{a_{0}} \text { of degree } n-(\ell+1)\right) e^{-\frac{Z_{r}}{n a_{0}}} {Y_{\ell}^m}(\theta, \phi) \\
+    \psi_{n\ell m}(r, \theta, \phi) = R_{n \ell}(r){Y_{\ell}^m}(\theta, \phi)= \sqrt{\left(\frac{2}{na}\right)^3\frac{\left(n-\ell-1\right)!}{2n(n+\ell)!}}e^{\frac{-r}{na}}\left(\frac{2r}{na}\right)^\ell [L_{n-\ell-1}^{2\ell+1}\left(\frac{2r}{na}\right)]{Y_{\ell}^m}(\theta, \phi)\\
+    \int\psi^*_{n \ell m}(\vec{r})\psi_{n' \ell ' m'}(\vec{r})d^3\vec r=\delta_{nn'}\delta_{mm'}\delta_{\ell\ell '}\\
+    \hat{H}\psi_{n \ell m}(\vec{r}) = E_n\psi_{n \ell m}(\vec{r})\\
+    n=1,2, \ldots, \quad \ell=0,1, \ldots, n-1, \quad m=-\ell, \ldots, \ell \\
+    \psi_{n\ell m}(r, \theta, \phi)=\frac{u_{n \ell}(r)}{r} {Y_{\ell}^m}(\theta, \phi) \\
+    u_{1,0}(r)=\frac{2 r}{a_{0}^{3 / 2}} \exp \left(-r / a_{0}\right) \\
+    u_{2,0}(r)=\frac{2 r}{\left(2 a_{0}\right)^{3 / 2}}\left(1-\frac{r}{2 a_{0}}\right) \exp \left(-r / 2 a_{0}\right) \\
+    u_{2,1}(r)=\frac{1}{\sqrt{3}} \frac{1}{\left(2 a_{0}\right)^{3 / 2}} \frac{r^{2}}{a_{0}} \exp \left(-r / 2 a_{0}\right)
+\end{gather}
+
+\subsection*{\underline{Spherical Coordinates:}}
+$$
+    \begin{aligned}
+         & \hat{\mathbf{r}}=\sin \theta \cos \phi \hat{\mathbf{x}}+\sin \theta \sin \phi \hat{\mathbf{y}}+\cos \theta \hat{\mathbf{z}}          \\
+         & \hat{\boldsymbol{\theta}}=\cos \theta \cos \phi \hat{\mathbf{x}}+\cos \theta \sin \phi \hat{\mathbf{y}}-\sin \theta \hat{\mathbf{z}} \\
+         & \hat{\boldsymbol{\phi}}=-\sin \phi \hat{\mathbf{x}}+\cos \phi \hat{\mathbf{y}}
+    \end{aligned}
+$$
+$$
+    \begin{aligned}
+         & \hat{\mathbf{x}}=\sin \theta \cos \phi \hat{\mathbf{r}}+\cos \theta \cos \phi \hat{\boldsymbol{\theta}}-\sin \phi \hat{\boldsymbol{\phi}} \\
+         & \hat{\mathbf{y}}=\sin \theta \sin \phi \hat{\mathbf{r}}+\cos \theta \sin \phi \hat{\boldsymbol{\theta}}+\cos \phi \hat{\boldsymbol{\phi}} \\
+         & \hat{\mathbf{z}}=\cos \theta \hat{\mathbf{r}}-\sin \theta \hat{\boldsymbol{\theta}}
+    \end{aligned}
+$$
+
+\subsection*{\underline{Identical Particles:}}
+Particles that share the same intrinsic properties: mass, charge, spin, magnetic moment, \dots etc. Identical particles are indistinguishable
+\begin{equation}
+    \Psi(1, 2, \dots, i, \dots, j, \dots, N)=\pm\Psi(1, 2, \dots, j, \dots, i, \dots, N)
+\end{equation}
+are either symmetric for Bosons (integer spin particles) or antisymmetric for Fermions (half integer spin particles) under exchange of any two particles.\\
 $\implies$ Pauli Exclusion Principle: Two identical Fermions cannot occupy the same quantum state.
-    \begin{equation}
-        \Psi_{Fermions}(R_1,R_2,\dots,R_N)= \frac{1}{\sqrt{N!}}
-        \left(\begin{matrix}
-                \Psi_1(R_1) & \Psi_2(R_1) & \dots  & \Psi_N(R_1) \\
-                \Psi_1(R_2) & \Psi_2(R_2) & \dots  & \Psi_N(R_2) \\
-                \vdots      & \vdots      & \vdots & \vdots      \\
-                \Psi_1(R_N) & \Psi_2(R_N) & \dots  & \Psi_N(R_N)
-            \end{matrix}\right)
-    \end{equation}
-    For Bosons use the same Slater-determinant by replacing all signs be + .
-    Spin $\frac{1}{2}$ particles can be in any of the following states:
-    \begin{enumerate}
-        \item[] \underline{Singlet State (Antisymmetric state):} \begin{equation} \chi_s(s1,s2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s1)\chi_{\downarrow}(s2)-\chi_{\downarrow}(s1)\chi_{\uparrow}(s2)) \end{equation} with total spin s=0.
-        \item[] \underline{Triplet States (Symmetric state):} with total spin $S_z=$1, 0, -1:
-            \begin{gather}
-                \chi_T(s_1, s_2) 
-                \begin{cases}
-                    \chi_{1,1}(s_1,s_2)=\chi_{\uparrow}(s_1)\chi_{\uparrow}(s_2)       \\
-                    \chi_{-1,-1}(s_1,s_2)=\chi_{\downarrow}(s_1)\chi_{\downarrow}(s_2) \\
-                    \chi_{1,0}(s_1,s_2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s_1)\chi_{\downarrow}(s_2)+\chi_{\downarrow}(s_1)\chi_{\uparrow}(s_2))
-                \end{cases}
-            \end{gather}
-    \end{enumerate}
-    
-    \subsection*{\underline{Electron Gas in Volume V:}}
-    Each eigenvalue in k-space occupy a volume $\frac{{(2\pi)^3}}{V}$ so that 2 for spin states:
-    \begin{equation} \sum_k f(k)=2\frac{V}{(2\pi)^3}\int d^3k f(k) \end{equation}
-    Highest occupied wave vector is called Fermi wave vector k$_F$ 
+\begin{equation}
+    \Psi_{Fermions}(R_1,R_2,\dots,R_N)= \frac{1}{\sqrt{N!}}
+    \left(\begin{matrix}
+            \Psi_1(R_1) & \Psi_2(R_1) & \dots  & \Psi_N(R_1) \\
+            \Psi_1(R_2) & \Psi_2(R_2) & \dots  & \Psi_N(R_2) \\
+            \vdots      & \vdots      & \vdots & \vdots      \\
+            \Psi_1(R_N) & \Psi_2(R_N) & \dots  & \Psi_N(R_N)
+        \end{matrix}\right)
+\end{equation}
+For Bosons use the same Slater-determinant by replacing all signs be + .
+Spin $\frac{1}{2}$ particles can be in any of the following states:
+\begin{enumerate}
+    \item[] \underline{Singlet State (Antisymmetric state):} \begin{equation} \chi_s(s1,s2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s1)\chi_{\downarrow}(s2)-\chi_{\downarrow}(s1)\chi_{\uparrow}(s2)) \end{equation} with total spin s=0.
+    \item[] \underline{Triplet States (Symmetric state):} with total spin $S_z=$1, 0, -1:
+        \begin{gather}
+            \chi_T(s_1, s_2) 
+            \begin{cases}
+                \chi_{1,1}(s_1,s_2)=\chi_{\uparrow}(s_1)\chi_{\uparrow}(s_2)       \\
+                \chi_{-1,-1}(s_1,s_2)=\chi_{\downarrow}(s_1)\chi_{\downarrow}(s_2) \\
+                \chi_{1,0}(s_1,s_2)=\frac{1}{\sqrt{2}}(\chi_{\uparrow}(s_1)\chi_{\downarrow}(s_2)+\chi_{\downarrow}(s_1)\chi_{\uparrow}(s_2))
+            \end{cases}
+        \end{gather}
+\end{enumerate}
+
+\subsection*{\underline{Electron Gas in Volume V:}}
+Each eigenvalue in k-space occupy a volume $\frac{{(2\pi)^3}}{V}$ so that 2 for spin states:
+\begin{equation} \sum_k f(k)=2\frac{V}{(2\pi)^3}\int d^3k f(k) \end{equation}
+Highest occupied wave vector is called Fermi wave vector k$_F$
 \begin{equation} k_F = (3\pi^2n)^{1/3}; \, n=\frac{N}{V} \,\, \text{Electronic Density}\end{equation}
 
 \subsection*{\underline{Ground State of N Electrons in Volume V:}}
