All changes added as per instructions

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -62,7 +62,7 @@ $1 \mathrm{fm}=10^{-15} \mathrm{~m}$, $1 \mathrm{fm}=10^{-15} \mathrm{~m}, \quad
     \item The wave function and its first order space derivative are continuous all over space and in particular at the boundaries of a finite potential.
     \item At boundaries with Dirac delta function potential,
           the wave function is still continuos but the first space derivative of the wavefunction is discontinuous. 
-    \item ? to square integrability physical solution should be finite all over space, no blow ups, in particular at infinity.
+    \item Due to square integrability, physical solution should be finite all over space, no blow ups, in particular at infinity.
     \item The number of nodes (zeros) of the eigenfunction increases by one unit between adjacent states as we move from the ground state (zero nodes) to higher excited states.
     \item Bound states exist only for confining potential (classically between turning points of the potential).
 \end{enumerate}
