--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -12,11 +12,11 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Phys. 310 Quantum Mechanics and Its Applications I (Term 212)}
-\rhead{Formula Sheet}
+\lhead{Phys. 410 Quantum Mechanics and Its Applications I (Term 221)}
+\rhead{Formulas Sheet}
 
 \begin{document}
-\begin{center}\textbf{\underline{\huge{Formula Sheet}}}\end{center}
+\begin{center}\textbf{\underline{\huge{Formulas Sheet}}}\end{center}
 
 \subsection*{\underline{Physical Constants:}}
 \begin{tabular}{lll}
